test/Fail/PatternSynVarShadowsPatternSyn.err
PatternSynVarShadowsPatternSyn.agda:9.11-12: error: [PatternSynonymArgumentShadows.PatternSynonym]
Pattern synonym variable x shadows pattern synonym defined at:
PatternSynVarShadowsPatternSyn.agda:8.9-10
when scope checking the declaration
  pattern p x = c x
